--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://Nothka.github.io/FoodieTheVan/",
+  "homepage":"http://github.com/Nothka/FoodieTheVan",
   "name": "reactwebsite",
   "version": "0.1.0",
   "private": false,
