--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://github.com/Nothka/FoodieTheVan",
+  "homepage":"https://nothka.github.io/FoodieTheVan/",
   "name": "reactwebsite",
   "version": "0.1.0",
   "private": false,
