--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://nothka.github.io/FoodieTheVan/",
+  "homepage":" https://Nothka.github.io/FoodieTheVan",
   "name": "reactwebsite",
   "version": "0.1.0",
   "private": false,
