--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":" https://Nothka.github.io/FoodieTheVan/",
+  "homepage": "localhost://3000",
   "name": "reactwebsite",
   "version": "0.1.0",
   "private": false,
